--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -757,6 +757,10 @@ img {
     margin-bottom: 20px;
 }
 
+.portfolio-cover-img{
+    height: 200px;
+}
+
 .feature-title{
     font-weight: 700;
     margin: 30px 0px 20px;
